fix navbar-responsive alignement

--- a/src/styles/navbar-responsive.scss
+++ b/src/styles/navbar-responsive.scss
@@ -14,9 +14,10 @@
             top: 1rem;
             display: flex;
             flex-direction: column;
-            align-items: start;
+            align-items: center;
             height: 100%;
             width: 100;
+            padding-left: 0;
 
             li {
                 color: #fff;
@@ -24,21 +25,20 @@
                 margin-top: 2.7rem;
                 font-size: 17px;
                 width: 100%;
+                text-align: center;
 
                 .line {
-                    margin-top: 1rem;
                     width: 90%;
                     height: 1px;
                     border-radius: 15px;
                     background-color: #fff;
+                    margin: 1rem auto;
                 }
 
                 .socialIcons {
                     position: relative;
-                    top: 1.4rem;
-                    left: -5%;
+                    top: 1rem;
                     display: flex;
-                    flex-direction: row;
                     justify-content: center;
                     width: 100%;
                     gap: 30px;
